--- a/our-gallery.html
+++ b/our-gallery.html
@@ -233,8 +233,69 @@
                <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
                 <img class="img-fluid" src="img/gallery-37.jpg" alt="">
                </div>
-   
-             
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-38.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-39.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-40.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-41.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-42.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-43.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-44.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-45.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-46.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-47.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-48.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-49.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-50.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-51.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-52.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-53.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-54.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-55.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-56.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-57.jpg" alt="">
+               </div>
+               <div class="item gts col-lg-3 col-md-4 col-6 col-sm">
+                <img class="img-fluid" src="img/gallery-58.jpg" alt="">
+               </div>
                
             </div>
          </div>
